added the ability to save  movies to favourites or watchlist. fixed errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,11 @@
             "server": "localhost",
             "port": 5432,
             "driver": "PostgreSQL",
-            "name": "pg local",
-            "database": "db",
-            "username": "postgres",
-            "password": "1234",
-            "connectionTimeout": 30
+            "name": "local sql",
+            "database": "Movie database",
+            "password": "luxray3x",
+            "connectionTimeout": 30,
+            "username": "postgres"
         }
     ]
 }
